all faculty GUI and ENROL GUI added

--- a/code/netbeans example/SchoolManagementSystem/src/my/schoolmanagementsystem/NewAdmissin.form
+++ b/code/netbeans example/SchoolManagementSystem/src/my/schoolmanagementsystem/NewAdmissin.form
@@ -42,50 +42,57 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
+              <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabel1" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel4" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel2" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel10" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel11" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel5" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel3" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel7" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel6" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel9" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
-                      <Component id="jLabel8" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                          <Component id="enrolgeneratorBtn" min="-2" pref="190" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                          <Component id="nextBtn" min="-2" pref="190" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                          <Component id="cancelBtn" min="-2" pref="190" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="jLabel12" min="-2" pref="317" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                                  <Component id="DOBDatePicker" pref="329" max="32767" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jLabel1" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel4" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel2" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel10" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel11" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel5" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel3" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel7" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel6" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel9" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                      <Component id="jLabel8" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="studentclassCombobox" max="32767" attributes="0"/>
+                                      <Component id="mothernameTxt" max="32767" attributes="0"/>
+                                      <Component id="addressTxt" max="32767" attributes="0"/>
+                                      <Component id="fathernameTxt" max="32767" attributes="0"/>
+                                      <Component id="amountTxt" max="32767" attributes="0"/>
+                                      <Component id="formnoTxt" max="32767" attributes="0"/>
+                                      <Component id="stdnameTxt" max="32767" attributes="0"/>
+                                      <Component id="contactTxt" max="32767" attributes="0"/>
+                                      <Component id="incomeCombobox" alignment="0" pref="329" max="32767" attributes="0"/>
+                                      <Component id="qualificationCombobox" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="formsubmissionDatePicker" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
+                              </Group>
+                          </Group>
+                      </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="studentclassCombobox" max="32767" attributes="0"/>
-                      <Component id="mothernameTxt" max="32767" attributes="0"/>
-                      <Component id="addressTxt" max="32767" attributes="0"/>
-                      <Component id="fathernameTxt" max="32767" attributes="0"/>
-                      <Component id="amountTxt" max="32767" attributes="0"/>
-                      <Component id="formnoTxt" max="32767" attributes="0"/>
-                      <Component id="stdnameTxt" max="32767" attributes="0"/>
-                      <Component id="contactTxt" max="32767" attributes="0"/>
-                      <Component id="incomeCombobox" alignment="0" pref="329" max="32767" attributes="0"/>
-                      <Component id="qualificationCombobox" alignment="1" max="32767" attributes="0"/>
-                      <Component id="formsubmissionDatePicker" alignment="0" max="32767" attributes="0"/>
-                  </Group>
-                  <EmptySpace pref="61" max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="nextBtn" min="-2" pref="190" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                  <Component id="cancelBtn" min="-2" pref="190" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-              </Group>
-              <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
-                      <Component id="enrolgeneratorBtn" min="-2" pref="190" max="-2" attributes="0"/>
-                      <EmptySpace pref="500" max="32767" attributes="0"/>
-                  </Group>
+                  <EmptySpace pref="51" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -105,13 +112,13 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel4" min="-2" pref="38" max="-2" attributes="0"/>
-                      <Component id="addressTxt" pref="44" max="32767" attributes="0"/>
+                      <Component id="addressTxt" pref="47" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Component id="jLabel7" min="-2" pref="38" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="8" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="9" max="32767" attributes="0"/>
                       </Group>
                       <Component id="contactTxt" max="32767" attributes="0"/>
                   </Group>
@@ -124,7 +131,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Component id="jLabel5" min="-2" pref="38" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="7" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="8" max="32767" attributes="0"/>
                       </Group>
                       <Component id="mothernameTxt" max="32767" attributes="0"/>
                   </Group>
@@ -151,10 +158,10 @@
                       <Component id="jLabel8" min="-2" pref="38" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
                           <EmptySpace min="9" pref="9" max="-2" attributes="0"/>
-                          <Component id="formsubmissionDatePicker" max="32767" attributes="0"/>
+                          <Component id="formsubmissionDatePicker" pref="34" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jLabel9" min="-2" pref="38" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
@@ -162,19 +169,17 @@
                           <EmptySpace min="8" pref="8" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jLabel12" pref="38" max="32767" attributes="0"/>
+                      <Component id="DOBDatePicker" max="32767" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="78" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="enrolgeneratorBtn" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                       <Component id="nextBtn" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                       <Component id="cancelBtn" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
-              </Group>
-              <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="607" max="32767" attributes="0"/>
-                      <Component id="enrolgeneratorBtn" min="-2" pref="35" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
-                  </Group>
+                  <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -557,6 +562,24 @@
               </Border>
             </Property>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel12">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" red="ff" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="14" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="cc" green="0" red="cc" type="rgb"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="text" type="java.lang.String" value="Student Date Of Birth"/>
+            <Property name="horizontalTextPosition" type="int" value="0"/>
+          </Properties>
+        </Component>
+        <Component class="org.jdesktop.swingx.JXDatePicker" name="DOBDatePicker">
         </Component>
       </SubComponents>
     </Container>
