--- a/code/C#SmsProject/MmmUI/MmmUI/Signin.xaml
+++ b/code/C#SmsProject/MmmUI/MmmUI/Signin.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="672" Background="#FF6B736D">
+             d:DesignHeight="300" d:DesignWidth="672" Style="{DynamicResource usrecntrl}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -22,11 +22,11 @@
             <Label></Label>
             <Label></Label>
             <Label  Style="{StaticResource labelStyle}" >User Type</Label>
-            <ComboBox Height="40" Name="userTypeCombobox" IsEditable="True" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" >
+            <ComboBox Height="40" Name="userTypeCombobox" IsEditable="True" SelectedIndex="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" >
                 
-            <ComboBoxItem>Head Master</ComboBoxItem>
-            <ComboBoxItem>Teacher</ComboBoxItem>
-            <ComboBoxItem>Clerk</ComboBoxItem>
+            <ComboBoxItem>Admin</ComboBoxItem>
+            <ComboBoxItem>Faculty</ComboBoxItem>
+            <ComboBoxItem>Stuff</ComboBoxItem>
         </ComboBox>
             <Label></Label>
             <Label></Label>
