--- a/code/C#SmsProject/MmmUI/MmmUI/Teacher/AddTeacher.xaml
+++ b/code/C#SmsProject/MmmUI/MmmUI/Teacher/AddTeacher.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" Style="{DynamicResource usrecntrl}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -13,7 +13,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <DockPanel  Background="#FF6B736D" LastChildFill="True">
+        <DockPanel LastChildFill="True">
             <UniformGrid DockPanel.Dock="Bottom" Rows="1">
                 <Button Style="{StaticResource MainBtnStyle}" Name="resetEmployeeInfoBtn">Reset</Button>
                 <Button Style="{StaticResource MainBtnStyle}" Name="employeeInfoSubmitBtn">Submit</Button>
