--- a/code/C#SmsProject/SmsUI/MmmUI/MainWindow.xaml
+++ b/code/C#SmsProject/SmsUI/MmmUI/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SMSUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Money marketting manager" MinHeight="560" MinWidth="1000" WindowState="Maximized" Background="#FF6B736D" xmlns:my="clr-namespace:SMSUI">
+        Title="School Management System" MinHeight="560" MinWidth="1000" WindowState="Maximized" Background="#FF6B736D" xmlns:my="clr-namespace:SMSUI">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
